# SysAdmin-Tamagotchi

./: .gitignore  Cargo.toml  DEPENDENCY-AUDIT.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DEVOPS-SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE-REPORT.md  LICENSE  QUICK_START.md  README.md  claude.md  deny.toml  mcp.json
.claude/: settings.local.json
.claude/agents/: architect.md  domain_expert.md  implementation.md  infra_devops.md  orchestrator.md  review_qa.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/: README.md
scripts/: build-release.ps1  build-release.sh
src/: main.rs  monitor.rs  pet.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  monitor.rs  pet.rs  poller.rs
tests/: manual_test_checklist.md  test_monitor.rs  test_pet.rs
ui/: index.html  package.json  vite.config.js
ui/src/: App.svelte
ui/src/components/: ActionMenu.svelte  ParticleEffect.svelte  Pet.svelte  StatsTooltip.svelte
